Add more AWS demos

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 */terraform.tfvars
-*/.terraform
+*/.terraform*
 */terraform.tfstate
 */terraform.tfstate.backup
-*/.terraform.lock.hcl
 */mykey
 */mykey.pub
+*/out.terraform
